# LighterEngine3

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp
editor/: CMakeLists.txt
editor/include/: editor.h  editor_glpanel.h  editor_input.h  editor_ui.h
editor/src/: editor.cpp  editor_glpanel.cpp  editor_main.cpp  editor_ui.cpp
editor/ui/: editor.fbp  noname.cpp  noname.h
lre3/: CMakeLists.txt
lre3/include/: lre3_animated_sprite.h  lre3_application.h  lre3_application_settings.h  lre3_asset_manager.h  lre3_bindings.h  lre3_camera.h  lre3_engine_subsystems.h  lre3_engine_systems.h  lre3_events.h  lre3_input.h  lre3_object.h  lre3_object_binding.h  lre3_scene_manager.h  lre3_scene_manager_binding.h  lre3_scene_root.h  lre3_script_system.h  lre3_shader.h  lre3_sprite_object.h  lre3_sprite_renderer.h  lre3_texture.h  lre3_utils.h
lre3/include/bindings/: lre3_asset_manager_binding.h  lre3_binding_macros.h  lre3_camera_binding.h  lre3_input_binding.h  lre3_object_binding.h  lre3_scene_manager_binding.h  lre3_scene_root_binding.h  lre3_shader_binding.h  lre3_sprite_object_binding.h  lre3_texture_binding.h
lre3/src/: lre3_animated_sprite.cpp  lre3_application.cpp  lre3_asset_manager.cpp  lre3_bindings.cpp  lre3_camera.cpp  lre3_engine_subsystems.cpp  lre3_engine_systems.cpp  lre3_object.cpp  lre3_object_binding.cpp  lre3_print.cpp  lre3_scene_manager.cpp  lre3_scene_manager_binding.cpp  lre3_scene_root.cpp  lre3_script_system.cpp  lre3_shader.cpp  lre3_sprite_object.cpp  lre3_sprite_renderer.cpp  lre3_texture.cpp
lre3/src/bindings/: lre3_animated_sprite_binding.cpp  lre3_asset_manager_binding.cpp  lre3_camera_binding.cpp  lre3_input_binding.cpp  lre3_object_binding.cpp  lre3_scene_manager_binding.cpp  lre3_scene_root_binding.cpp  lre3_shader_binding.cpp  lre3_sprite_object_binding.cpp  lre3_texture_binding.cpp
resources/scripts/: animated_sprite.lua  player.lua  test.lua  test2.lua
resources/scripts/engine/: Object.lua  Scene.lua
resources/scripts/inner/: test2.lua
resources/shaders/: base.fs  base.vs
